# ReCoN

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codecov.yml
docs/source/: index.rst
docs/source/API/: plot.rst
docs/source/recon_examples/: 1.recon_molecular_treatment.ipynb  2.recon_multicellular_coordination.ipynb  3.recon_molecular_cascades.ipynb  4.recon_hummus.ipynb
scripts/: generate_golden_explore_outputs.py
src/recon/data/: __init__.py  load_data.py
src/recon/explore/: recon.py
src/recon/plot/: __init__.py  cascade_core.py  cascade_plot.py  plot_multicell.py  plot_results.py  sankey_paths.py
tests/: README.md  test_cascade_plot.py  test_celltype.py  test_explore_helpers.py  test_golden_explore.py  test_infer_grn.py  test_load_data.py  test_multicell.py  test_plot.py  test_sankey.py  test_sankey_extended.py
tests/golden/: celltype_explore.csv  multicell_explore.csv  multicell_targets_direct.csv  multicell_targets_indirect.csv
