[project]
name = "recon"
version = "0.0.3"
description = "ReCoN: [Reconstruction of multicellular systems from single-cell data to predict perturbation responses and cell programs coordination]"
authors = [
    { name="Rémi Trimbour", email="remi.trimbour@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = ["recon", "multilayer", "single-cell", "treatment"]

dependencies = [
    "numpy<2.0.0",
    "pandas",
    "hummuspy>=0.1.9",
    "multixrank",
    "scanpy",
    "scipy",
    "plotly",
    "arboreto",
    "matplotlib",
    "circe-py>=0.3.9",
    "nbformat>=4.2.0",
    "liana"
]

[project.optional-dependencies]
grn-lite = [
    "celloracle-lite>=0.21.0"
]
tutorials = [
    "pooch",  # for downloading tutorial data from Zenodo
]
grn-lite-tutorials = [
    "celloracle-lite>=0.21.0",  # grn-lite dependency
    "pooch"  # tutorials dependency
]

[project.urls]
Homepage = "https://recon-doc.readthedocs.io"
Repository = "https://github.com/cantinilab/recon"

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Root of packages is "src"
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
# Include any package data files if needed
recon = ["data/**/*.parquet",] # "data/**/*.csv", "data/**/*.h5ad"] 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
